# code-editor

./: Dockerfile.workspace  index.html  package-lock.json  package.json  tailwind.config.js  terminal-server.cjs  tsconfig.json  vite.config.ts
architecture/: 00-vision.md  01-system-overview.md  02-workspace-manager.md  03-event-bus.md  04-tool-registry.md  05-permission-manager.md  06-runtime-manager.md  07-terminal-manager.md  08-project-indexer.md  09-knowledge-graph.md  11-session-memory.md  12-task-queue.md  15-verification-engine.md  16-plugin-sdk.md  17-security-model.md  18-database-schema.md  19-roadmap.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: providers.tsx
src/components/ide/: DeveloperWorkspace.tsx  XtermTerminal.tsx
src/context/: AppContext.tsx  EventBus.ts  WorkspaceManager.tsx
