[package]
name = "antigravity-dev-environment"
version = "0.1.0",
description = "Antigravity Dev Environment Desktop Shell"
authors = ["Antigravity Corporation"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
